--- a/setup.cfg
+++ b/setup.cfg
@@ -39,5 +39,4 @@ python_requires = >=3.8
 packages = find:
 include_package_data = true
 zip_safe = false
-install_requires =
-    google-cloud-tasks >= 2.5
+install_requires = google-cloud-tasks >= 2.5.0
